[project]
name = "double-block-sparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "huggingface-hub>=1.7.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "seaborn>=0.13.2",
    "torch==2.4",
    "transformers>=5.3.0",
]
