[project]
name = "double-block-sparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "einops>=0.8.2",
    "huggingface-hub>=1.7.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "timm>=1.0.26",
    "torch==2.11.0",
    "transformers>5.3.0",
    "wandb>=0.25.1",
]
